# PrintlTools

./: Cargo.toml  build.rs  jakefile.toml
.githooks/: pre-commit
.github/workflows/: format.yml
assets/windows/: app-icon.rc
doc/: WINDOWS_INSTALLER.md  specsheet.md
packaging/windows/: PrintLTools.iss  build-installer.ps1
scripts/: generate-app-icon.ps1  install_git_hooks.ps1  version_bump.ps1
src/: app.css  app.rs  dialogs.rs  main.rs  page_counter.rs  pdf.rs  registry.rs  results.rs  tray.rs  usb.rs  window_control.rs  windows_icon.rs
